--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Article Summarizer",
+  "name": "ReadInShort",
   "version": "1.0",
   "description": "Summarize articles using ChatGPT",
   "permissions": [
