--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ReadInShort",
-  "version": "1.0",
+  "version": "1.0.1",
   "description": "Summarize articles using ChatGPT",
   "permissions": [
     "activeTab",
@@ -20,14 +20,30 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "options_page": "settings.html",
+  "options_ui": {
+    "page": "settings.html",
+    "open_in_tab": true
+  },
   "background": {
-    "service_worker": "background.js"
+    "scripts": [
+      "browser-polyfill.js",
+      "background.js"
+    ]
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "browser-polyfill.js",
+        "content.js"
+      ]
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "readinshort@example.com"
+    }
+  }
 }
